[package]
name = "msf-task"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0" # <--- Add `anyhow` to our project dependencies.
structopt = "0.3"               # Parse command line argument by defining a struct.
chrono = { version = "0.4", features = ["serde"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"    # Add serde_json.
home = "0.5" # <--- Add `home` to our project dependencies.

